--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,5 +37,10 @@ body{
 }
 
 .pub_titulo{
-    border-top:1px solid black
+    border-top:1px solid black;
+    cursor:pointer
+}
+
+li{
+    margin:15px 0 15px 0;
 }
